@@ -3,6 +3,7 @@
 - Updated NHibernate to to 2.1.4
 - Updated Castle Core to 1.2
 - Updated Castle DynamicProcy to 2.2
+- Added support for NHibernate's new access methods "readonly" and "backfield".
 
 - Bugs fixed:
   AR-ISSUE-271
